added code to check git commit

--- a/BaseApp/appsettings.json
+++ b/BaseApp/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BaseAppConnectionString": "Data Source=DESKTOP-H1B0SBM;Initial Catalog=BaseApp;Persist Security Info=True;User ID=sa;Password=sql@123;Encrypt=False;Trust Server Certificate=True"
+    //"NZWalksAuthConnectionString": "Data Source=DESKTOP-H1B0SBM;Initial Catalog=NZWalksAuthDb;Persist Security Info=True;User ID=sa;Password=sql@123;Encrypt=False;Trust Server Certificate=True"
+  },
+  "Jwt": {
+    "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
+    "Issuer": "https://localhost:7081/",
+    "Audience": "https://localhost:7081/"
+  }
 }
